# robot-contact-assembly

./: .gitignore  README.md  pyproject.toml
configs/: peg_in_hole.yaml
docker/: isaac-compose.project.yml
docs/: architecture.md  gpu_selection_policy.md  phase1_cv_summary.md  phase1_gpu_session_runbook.md  phase2_control_mode_comparison_plan.md  phase2_cv_summary.md  phase2_il_contact_policy_plan.md  task_breakdown.md
experiments/: 2026-03-29_phase1_runtime_and_eval_validation.md  2026-03-29_runtime_validation.md  2026-03-29_scripted_baseline_tuning.md  2026-04-05_phase1_rl_baseline.md  2026-04-19_phase2_contact_shell_validation.md  2026-04-26_phase2_contact_frame_fix.md  2026-04-26_phase2_direct_contact_baseline.md  2026-04-26_phase2_l4_gate_attempt.md  2026-05-14_phase2_guarded_gate_attempt.md  2026-05-17_phase2_near_success_diagnosis.md  2026-05-18_phase2_contact_bc_smoke.md  2026-05-19_phase2_contact_demo_coverage.md  2026-05-20_phase2_bc_eval_trace_audit.md  2026-05-22_brev_support_followup.md  README.md
scripts/: analyze_bc_eval_traces.py  analyze_contact_demo_coverage.py  analyze_near_success_windows.py  analyze_relaxed_success_gate.py  bootstrap_brev_workspace.sh  calibrate_relative_ik_action.py  capture_remote_runtime_manifest.sh  check_contact_geometry_constants.py  check_remote_runtime.sh  debug_pose_alignment.py  evaluate_contact_bc_policy.py  evaluate_rsl_rl_checkpoint.py  extract_contact_demo_dataset.py  install_remote_isaaclab_runtime.sh  list_envs.py  live_step_scripted_baseline.py  live_visualize_play_env.py  play_rsl_rl.py  pull_artifacts.sh  (+67 more)
(+30 files in other folders)
